overflow issue resolved

--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@ body{
 section{
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 
 }
 
